@@ -13811,6 +13811,7 @@ door{
   direction = 3,
   sprite = "entities/doors/inside/door_d1_weak_wall",
   opening_method = "explosion",
+   properties = {{key = "opening_method",value = "explosion",},},
 }
 
 dynamic_tile{
@@ -14444,6 +14445,7 @@ door{
   sprite = "entities/doors/inside/door_d1_weak_wall",
   savegame_variable = "dungeon_2_b1_door_6_11",
   opening_method = "explosion",
+   properties = {{key = "opening_method",value = "explosion",},},
 }
 
 dynamic_tile{
@@ -14465,6 +14467,7 @@ door{
   sprite = "entities/doors/inside/door_d1_weak_wall",
   savegame_variable = "dungeon_2_b1_door_6_11",
   opening_method = "explosion",
+   properties = {{key = "opening_method",value = "explosion",},},
 }
 
 destructible{
