@@ -9004,6 +9004,7 @@ door{
   sprite = "entities/doors/inside/door_d1_weak_wall",
   savegame_variable = "dungeon_2_b3_door_15_20",
   opening_method = "explosion",
+   properties = {{key = "opening_method",value = "explosion",},},
 }
 
 door{
@@ -9015,6 +9016,7 @@ door{
   sprite = "entities/doors/inside/door_d1_weak_wall",
   savegame_variable = "dungeon_2_b3_door_15_20",
   opening_method = "explosion",
+   properties = {{key = "opening_method",value = "explosion",},},
 }
 
 enemy{
