@@ -18099,6 +18099,12 @@ door{
   layer = 0,
   x = 1736,
   y = 88,
+  properties = {
+    {
+      key = "opening_method",
+      value = "explosion",
+    },
+  },
   direction = 0,
   sprite = "entities/doors/inside/door_d1_very_weak_wall",
   savegame_variable = "dungeon_3_b2_door_6_6",
@@ -18110,6 +18116,12 @@ door{
   layer = 0,
   x = 1816,
   y = 88,
+  properties = {
+    {
+      key = "opening_method",
+      value = "explosion",
+    },
+  },
   direction = 2,
   sprite = "entities/doors/inside/door_d1_very_weak_wall",
   savegame_variable = "dungeon_3_b2_door_6_6",
@@ -18259,6 +18271,12 @@ door{
   layer = 0,
   x = 568,
   y = 744,
+  properties = {
+    {
+      key = "opening_method",
+      value = "explosion",
+    },
+  },
   direction = 1,
   sprite = "entities/doors/inside/door_d1_weak_wall",
   savegame_variable = "dungeon_3_b2_door_14_20",
@@ -18270,6 +18288,12 @@ door{
   layer = 0,
   x = 568,
   y = 680,
+  properties = {
+    {
+      key = "opening_method",
+      value = "explosion",
+    },
+  },
   direction = 3,
   sprite = "entities/doors/inside/door_d1_weak_wall",
   savegame_variable = "dungeon_3_b2_door_14_20",
@@ -18323,6 +18347,12 @@ door{
   layer = 0,
   x = 600,
   y = 584,
+  properties = {
+    {
+      key = "opening_method",
+      value = "explosion",
+    },
+  },
   direction = 0,
   sprite = "entities/doors/inside/door_d1_weak_wall",
   savegame_variable = "dungeon_3_b2_door_14_15",
@@ -18334,6 +18364,12 @@ door{
   layer = 0,
   x = 664,
   y = 584,
+  properties = {
+    {
+      key = "opening_method",
+      value = "explosion",
+    },
+  },
   direction = 2,
   sprite = "entities/doors/inside/door_d1_weak_wall",
   savegame_variable = "dungeon_3_b2_door_14_15",
@@ -18387,6 +18423,12 @@ door{
   layer = 0,
   x = 600,
   y = 832,
+  properties = {
+    {
+      key = "opening_method",
+      value = "explosion",
+    },
+  },
   direction = 0,
   sprite = "entities/doors/inside/door_d1_weak_wall",
   savegame_variable = "dungeon_3_b2_door_20_21",
@@ -18398,6 +18440,12 @@ door{
   layer = 0,
   x = 664,
   y = 832,
+  properties = {
+    {
+      key = "opening_method",
+      value = "explosion",
+    },
+  },
   direction = 2,
   sprite = "entities/doors/inside/door_d1_weak_wall",
   savegame_variable = "dungeon_3_b2_door_20_21",
@@ -18451,6 +18499,12 @@ door{
   layer = 0,
   x = 1368,
   y = 1224,
+  properties = {
+    {
+      key = "opening_method",
+      value = "explosion",
+    },
+  },
   direction = 1,
   sprite = "entities/doors/inside/door_d1_weak_wall",
   savegame_variable = "dungeon_3_b2_door_29_35",
@@ -18462,6 +18516,12 @@ door{
   layer = 0,
   x = 1368,
   y = 1160,
+  properties = {
+    {
+      key = "opening_method",
+      value = "explosion",
+    },
+  },
   direction = 3,
   sprite = "entities/doors/inside/door_d1_weak_wall",
   savegame_variable = "dungeon_3_b2_door_29_35",
@@ -18683,6 +18743,12 @@ door{
   layer = 0,
   x = 888,
   y = 264,
+  properties = {
+    {
+      key = "opening_method",
+      value = "explosion",
+    },
+  },
   direction = 1,
   sprite = "entities/doors/inside/door_d1_very_weak_wall",
   savegame_variable = "dungeon_3_b2_door_3_9",
@@ -18694,6 +18760,12 @@ door{
   layer = 0,
   x = 888,
   y = 200,
+  properties = {
+    {
+      key = "opening_method",
+      value = "explosion",
+    },
+  },
   direction = 3,
   sprite = "entities/doors/inside/door_d1_very_weak_wall",
   savegame_variable = "dungeon_3_b2_door_3_9",
@@ -18747,6 +18819,12 @@ door{
   layer = 0,
   x = 1240,
   y = 856,
+  properties = {
+    {
+      key = "opening_method",
+      value = "explosion",
+    },
+  },
   direction = 0,
   sprite = "entities/doors/inside/door_d1_weak_wall",
   savegame_variable = "dungeon_3_b2_door_22_23",
@@ -18758,6 +18836,12 @@ door{
   layer = 0,
   x = 1304,
   y = 856,
+  properties = {
+    {
+      key = "opening_method",
+      value = "explosion",
+    },
+  },
   direction = 2,
   sprite = "entities/doors/inside/door_d1_weak_wall",
   savegame_variable = "dungeon_3_b2_door_22_23",
@@ -18811,6 +18895,12 @@ door{
   layer = 0,
   x = 1560,
   y = 856,
+  properties = {
+    {
+      key = "opening_method",
+      value = "explosion",
+    },
+  },
   direction = 0,
   sprite = "entities/doors/inside/door_d1_weak_wall",
   savegame_variable = "dungeon_3_b2_door_23_24",
@@ -18822,6 +18912,12 @@ door{
   layer = 0,
   x = 1624,
   y = 856,
+  properties = {
+    {
+      key = "opening_method",
+      value = "explosion",
+    },
+  },
   direction = 2,
   sprite = "entities/doors/inside/door_d1_weak_wall",
   savegame_variable = "dungeon_3_b2_door_23_24",
