@@ -10130,6 +10130,7 @@ door{
   sprite = "entities/doors/inside/door_d2_weak_wall",
   savegame_variable = "dungeon_5_0f_door_21_27",
   opening_method = "explosion",
+   properties = {{key = "opening_method",value = "explosion",},},
 }
 
 dynamic_tile{
@@ -10151,6 +10152,7 @@ door{
   sprite = "entities/doors/inside/door_d2_weak_wall",
   savegame_variable = "dungeon_5_0f_door_21_27",
   opening_method = "explosion",
+   properties = {{key = "opening_method",value = "explosion",},},
 }
 
 enemy{
