@@ -3006,6 +3006,7 @@ door{
   sprite = "entities/doors/inside/door_d2_weak_wall",
   savegame_variable = "inside_temple_of_time_path_cave_door",
   opening_method = "explosion",
+   properties = {{key = "opening_method",value = "explosion",},},
 }
 
 door{
@@ -3017,6 +3018,7 @@ door{
   sprite = "entities/doors/inside/door_d2_weak_wall",
   savegame_variable = "inside_temple_of_time_path_cave_door",
   opening_method = "explosion",
+   properties = {{key = "opening_method",value = "explosion",},},
 }
 
 teletransporter{
