@@ -780,6 +780,7 @@ door{
   sprite = "entities/doors/inside/door_d1_very_weak_wall",
   savegame_variable = "inside_ruins_building_door",
   opening_method = "explosion",
+   properties = {{key = "opening_method",value = "explosion",},},
 }
 
 door{
@@ -791,6 +792,7 @@ door{
   sprite = "entities/doors/inside/door_d1_very_weak_wall",
   savegame_variable = "inside_ruins_building_door",
   opening_method = "explosion",
+   properties = {{key = "opening_method",value = "explosion",},},
 }
 
 wall{
