@@ -1601,6 +1601,7 @@ door{
   sprite = "entities/doors/inside/door_d1_very_weak_wall",
   savegame_variable = "outside_kakarico_milk_bar_door",
   opening_method = "explosion",
+   properties = {{key = "opening_method",value = "explosion",},},
 }
 
 npc{
