@@ -20936,6 +20936,7 @@ door{
   sprite = "entities/doors/Outside/cave_door_rock01",
   savegame_variable = "outside_east_castle_weak_door",
   opening_method = "explosion",
+   properties = {{key = "opening_method",value = "explosion",},},
 }
 
 custom_entity{
