@@ -440,6 +440,7 @@ Alpha 1.17 (started 03/05/23) "Needlefish Update":
 	CHG: Replaced hardcoded sounds by empty ones (#137).
 	CHG: Made the hero automatically float when there is water above.
 	CHG: Merged Popos and Blobs colour variations into one sprite sheet (#221).
+	CHG: Added a custom property for bombable doors.
 	FIX: Fixed the fairy cave teletransporter in the West Mountains linking to a wrong destination (#130).
 	FIX: Fixed changing stream direction not changing sprite direction in the Water Temple (0F) (#55).
 	FIX: Fixed case sensibility issues (#133).
